# odin-vma

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  premake5.lua  vma.odin  vma_windows.odin
resources/: vk_mem_alloc.h
vma/: CMakeLists.txt  core.odin  enums.odin  procedures.odin  structs.odin
vma/lib/: vma.lib
